[package]
name = "ether"
version = "0.1.0"
authors = ["yuyongpeng <yuyongpeng@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

structopt = "0.3"

rustc-hex = "2.1.0"
unicode-segmentation = "1.6.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ethereum-tx-sign = "3.0.3"
ethereum-types = "0.9"
hex = "0.4.2"
bytes = { version = "0.5", features = ["serde"] }
log = "0.4.0"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["full"] }
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", branch = "master" }
#libsecp256k1 = "0.3.5"
ethkey = "0.3"
eth_checksum = "0.1.1"
ether_lib = { path = "./ether_lib" }
tokio-test = "0.2.1"

#[profile.dev]       	# 使用 cargo build 会走这个选项
#opt-level = 0		# 设置优化级别
#debug = true		# 是否包含调试信息
#debug-assertions = true	# 是否打开调试断言
#overflow-checks = true	# 启用溢出检查
#lto = false		# 控制LLVM的链接优化时间
#panic = 'unwind'		# 使用哪种恐慌策略
#incremental = true	# 是否开启增量编译，可以缩短编译时间
#codegen-units = 16    	# 并行处理crate，缩短编译时间。
#			# 开启了 incremental 就会忽略这个选项
#rpath = false		# 是否启动rpath